Rework maven profiles.

--- a/sharkfw/android/pom.xml
+++ b/sharkfw/android/pom.xml
@@ -21,4 +21,12 @@
         <!--<module>android-nfc</module>-->
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
