--- a/sharkfw/j2se/jts/pom.xml
+++ b/sharkfw/j2se/jts/pom.xml
@@ -14,6 +14,12 @@
     <artifactId>jts</artifactId>
     <packaging>jar</packaging>
 
+    <build>
+        <finalName>
+            sharkfw-${project.artifactId}-${project.parent.version}
+        </finalName>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
