--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,18 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <name>sharkfw-core</name>
-    <url>http://www.sharksystem.net/</url>
-
     <properties>
         <compile.source.jdk>1.7</compile.source.jdk>
         <compile.target.jdk>1.7</compile.target.jdk>
     </properties>
+
+    <name>sharkfw-core</name>
+    <description>
+        Shark - Semantic P2P Framework
+
+        Shark is an acronym. It stands for Shared Knowledge. Shark applications store user data only on user devices. We don't use any server or cloud architecture. Each Shark application is a peer - an independent and self-contained entity which can directly communicate with others.
+    </description>
+    <url>http://www.sharksystem.net/</url>
 
     <scm>
         <connection>scm:git:https://github.com/SharedKnowledge/SharkFW.git</connection>
