--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
             </plugin>
 
             <!-- ensure that sharkfw-core-VERSION-javadoc.jar is created -->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
@@ -163,7 +163,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
 
         </plugins>
     </build>
