initialer Commit für SQLite

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <!--<artifactId>maven-assembly-plugin</artifactId>-->
             <!--<version>2.6</version>-->
         <!--</dependency>-->
+        <!-- sqlite dependency -->
+        <!--<dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.16.1</version>
+        </dependency> -->
     </dependencies>
 
 
