--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
             <!--<version>2.6</version>-->
         <!--</dependency>-->
         <!-- sqlite dependency -->
-        <!--<dependency>
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.16.1</version>
-        </dependency> -->
+        </dependency>
     </dependencies>
 
 
