Added test packages and fixed addInformation.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ bin/net/sharkfw/knowledgeBase/sync/TODO
 bin/
 */**/target/
 target
+src\test\java\net\sharkfw\knowledgeBase\persistent\sql\information.db
